--- a/ASPRazorMovies/Pages/Shared/_Layout.cshtml
+++ b/ASPRazorMovies/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ASPRazorMovies</title>
+    <title>@ViewData["Title"] - Movies</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-page="/Index" class="navbar-brand">ASPRazorMovies</a>
+                <a class="navbar-brand" asp-page="/Movies/Index">RpMovie</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
